samples/_failures_safe/1761692714_0239fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_026ee97b.c: In function ‘main’:
./samples/SAFE/__tmp_026ee97b.c:140:12: error: missing terminating " character
  140 |     printf("Final state: %d
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_026ee97b.c:140:5: error: expected expression at end of input
  140 |     printf("Final state: %d
      |     ^~~~~~
./samples/SAFE/__tmp_026ee97b.c:140:5: error: expected declaration or statement at end of input
